# my-elasticsearch

./: .env  README.md  pyproject.toml
src/my_elasticsearch/: cli.py  db.py  searchengine.py
tests/: test_db.py  test_search.py
