[tool.poetry]
name = "my-elasticsearch"
version = "0.1.0"
description = ""
authors = ["Eduard Kaverinskyi <eduard.kaverinskyi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_elasticsearch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
